<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  style="@style/AppTheme"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@drawable/bg_welcome"
			  android:gravity="center_horizontal"
			  android:orientation="vertical"
			  tools:context="pe.geekadvice.zzleep.LoginActivity">

	<!-- Login progress -->
	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:orientation="vertical"
			android:padding="15dp">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="120dp"
				android:layout_gravity="center"
				android:layout_margin="20dp"
				android:src="@mipmap/logo_big"/>

			<TextView
				style="@style/Title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:gravity="center"
				android:text="Iniciar sesión"
				android:textAppearance="@style/TextAppearance.FontPath"/>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:paddingLeft="5dp"
				android:background="@drawable/bg_default_input"
				android:layout_height="wrap_content">

				<AutoCompleteTextView
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:paddingLeft="5dp"
				android:layout_marginTop="10dp"
				android:background="@drawable/bg_default_input"

				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeActionId="@+id/login"
					android:imeActionLabel="@string/action_sign_in_short"
					android:imeOptions="actionUnspecified"
					android:inputType="textPassword"
					android:maxLines="1"/>

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/email_sign_in_button"
				style="@style/Button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/action_sign_in"
				android:textStyle="bold"/>

			<LinearLayout
				android:id="@+id/loginFacebook"
				style="@style/ButtonFacebook"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/textView4"
					style="@style/InputIcon"
					android:layout_width="25dp"
					android:layout_height="match_parent"
					android:fontFamily="font"
					android:text="@string/icon_facebook"
					android:textAppearance="@style/TextAppearance.FontIcon"
					android:textColor="@color/colorWhite"/>
<!--
				<TextView
					android:id="@+id/labelBtnFcebook"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:text="Iniciar sesión con facebook"
					android:textColor="@color/colorWhite"/> -->
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<ProgressBar
		android:id="@+id/login_progress"
		android:layout_width="30dp"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:visibility="gone"
		/>

</LinearLayout>
